--- a/views/center/rajossho/rajosshoTable.ejs
+++ b/views/center/rajossho/rajosshoTable.ejs
@@ -41,8 +41,7 @@
                 
                 
                
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/center/rajosshoAdd/<%= row.id %>"><i class="fa fa-plus"></i>
                 </td>
             </tr>
         <% }) %>
