--- a/views/center/dashboard.ejs
+++ b/views/center/dashboard.ejs
@@ -62,7 +62,7 @@
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>রাজস্ব আয়</h6>
-                                                <h4>৮০০০০০০ টাকা</h4>
+                                                <h4 id="totalrajossho"><%= new Number(totalrajossho).toLocaleString("bn-BD") %></h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
@@ -95,6 +95,7 @@
                 $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
                 $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
                 $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+                $('#totalrajossho').html(new Number(data.totalrajossho).toLocaleString("bn-BD"));
             },
             complete: function() {
                 $('#loading').hide();
