--- a/views/center/expense/expenseTable.ejs
+++ b/views/center/expense/expenseTable.ejs
@@ -47,7 +47,8 @@
                 
                 
                
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/center/expenseAdd/<%= row.id %>"><i class="fa fa-plus"></i></a>
+                    <a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
                     <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
