--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -69,7 +69,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="state">
                                         <h6>রাজস্ব আয়</h6>
-                                        <h4>৮০০০০০০ টাকা</h4>
+                                        <h4 id="totalrajossho"><%= new Number(totalrajossho).toLocaleString("bn-BD") %></h4>
                                     </div>
                                     <div class="icon">
                                         <i class="ik ik-award"></i>
@@ -175,6 +175,218 @@
                             </div>
                         </div>
 
+                        <div class="card">
+                            <div class="card-body">
+                                <form action="/pd/newRajosshoCode" id="newRajosshoCode" class="form-horizontal" method="post"  role="form">
+                                <div class="form-row">
+                                        <label for="newRajosshoCode" class="col-md-1 control-label"> রাজস্বের নতুন আর্থিক কোড :</label>
+                                        <div class="col-md-3">
+                                            <input type="text" class="form-control" name="newRajosshoCode" placeholder="রাজস্বের নতুন আর্থিক কোড :">
+                                        </div>
+                                        <label for="newUpokhat" class="col-md-1 control-label"> রাজস্বের নতুন উপখাতের নাম :</label>
+                                        <div class="col-md-3">
+                                            <input type="text" class="form-control" name="newUpokhat" placeholder="রাজস্বের নতুন উপখাতের নাম :">
+                                        </div>
+                                        <div class="col-md-3">
+                                            <input type="submit" name="submit" value=" যোগ করুন" class="btn btn-primary">   
+                                        </div>
+                                </div>
+                            </form>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+                                <form action="/pd/newKhorochCode"  id="newKhorochCode" class="form-horizontal" method="post"  role="form">
+                                <div class="form-row">
+                                        <label for="newKhorochCode" class="col-md-1 control-label"> খরচের নতুন আর্থিক কোড :</label>
+                                        <div class="col-md-3">
+                                            <input type="text" class="form-control" name="newKhorochCode" placeholder="খরচের নতুন আর্থিক কোড :">
+                                        </div>
+                                        <label for="newkhat" class="col-md-1 control-label"> নতুন খাতের নাম :</label>
+                                        <div class="col-md-3">
+                                            <input type="text" class="form-control" name="newkhat" placeholder="নতুন খাতের নাম :">
+                                        </div>
+                                        <div class="col-md-3">
+                                            <input type="submit" name="submit" value="যোগ করুন" class="btn btn-primary">   
+                                        </div>
+                                </div>
+                            </form>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+                                <form action="/pd/apaCode" id="newRajosshoCode" class="form-horizontal" method="post"  role="form">
+                                <div class="form-row">
+                                        <label for="newApaUddessho" class="col-md-1 control-label"> এপিএ'র নতুন কৌশলগত উদ্দেশ্য  :</label>
+                                        <div class="col-md-3">
+                                            <input type="text" class="form-control" name="newApaUddessho" placeholder="এপিএ'র নতুন কৌশলগত উদ্দেশ্য  :">
+                                        </div>
+                                        <div class="col-md-3">
+                                            <input type="submit" name="submit" value=" যোগ করুন" class="btn btn-primary">   
+                                        </div>
+                                </div>
+                            </form>
+                            </div>
+                        </div>
+
+ 
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">এপিএ'র কৌশলগত উদ্দেশ্য</label>
+                                        <select class="form-control" id="biboron_list" name="biboron">
+                                            <option selected> এপিএ'র কৌশলগত উদ্দেশ্য বাছুন </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'biboron'){
+                                            %>
+                                                     <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                 }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">কৌশলগত উদ্দেশ্য এর মান</label>
+                                        <input type="text" id="jaat" name="jaat" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_jaat">কৌশলগত উদ্দেশ্য এর মান যোগ করুন</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">এপিএ'র কৌশলগত উদ্দেশ্য এর মান</label>
+                                        <select class="form-control" id="biboron_list" name="biboron">
+                                            <option selected> এপিএ'র কৌশলগত উদ্দেশ্য এর মান বাছুন </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'biboron'){
+                                            %>
+                                                     <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                 }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">কার্যক্রম</label>
+                                        <input type="text" id="jaat" name="jaat" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_jaat">কার্যক্রম যোগ করুন</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">কার্যক্রম</label>
+                                        <select class="form-control" id="biboron_list" name="biboron">
+                                            <option selected> কার্যক্রম বাছুন </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'biboron'){
+                                            %>
+                                                     <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                 }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">কর্মসম্পাদন সূচক এর মান</label>
+                                        <input type="text" id="jaat" name="jaat" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_jaat">কর্মসম্পাদন সূচক এর মান যোগ করুন</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">কর্মসম্পাদন সূচক</label>
+                                        <select class="form-control" id="biboron_list" name="biboron">
+                                            <option selected> কর্মসম্পাদন সূচক বাছুন </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'biboron'){
+                                            %>
+                                                     <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                 }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">একক</label>
+                                        <input type="text" id="jaat" name="jaat" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_jaat">একক এর মান যোগ করুন</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="form-row">
+                                    <div class="col">
+                                        <label for="">একক</label>
+                                        <select class="form-control" id="biboron_list" name="biboron">
+                                            <option selected> একক বাছুন </option>
+                                            <% crop.forEach((row) => {
+                                                if (row.type === 'biboron'){
+                                            %>
+                                                     <option value="<%= row.id %>"> <%= row.name %> </option>
+                                            <%
+                                                 }
+                                                })
+                                            %>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <label for="">কর্মসম্পাদন সূচক এর মান </label>
+                                        <input type="text" id="jaat" name="jaat" class="form-control">
+                                    </div>
+                                    <div class="col">
+                                        <label for=""></label>
+                                        <button class="btn btn-primary" id="add_jaat">কর্মসম্পাদন সূচক এর মান যোগ করুন</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -199,6 +411,8 @@
                 $('#totalProduction').html(new Number(data.totalProduction).toLocaleString("bn-BD"));
                 $('#totalBitoron').html(new Number(data.totalBitoron).toLocaleString("bn-BD"));
                 $('#totalMojud').html(new Number(data.totalMojud).toLocaleString("bn-BD"));
+                $('#totalrajossho').html(new Number(data.totalrajossho).toLocaleString("bn-BD"));
+
             },
             complete: function() {
                 $('#loading').hide();
