--- a/views/pd/monthlyProgress/monthlyProgressTable.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressTable.ejs
@@ -1,58 +1,187 @@
 <%if (records.length >0){ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-    <thead>
-    <tr>
-        <th>ক্যাটাগরি নাম</th>
-        <th>সাব-ক্যাটাগরি নাম</th>
-        <th>বিবরণ</th>
-        <th>জাত</th>
-        <th>উৎপাদন (লক্ষ্যমাত্রা)</th>
-        <th>উৎপাদন (চলতি মাস)</th>
-        <th>উৎপাদন (পূর্বমাস পর্যন্ত)</th>
-        <th>মোট উৎপাদন (চলতি+পূর্ব মাস)</th>
-        <th>ডিএই চালানে প্রাপ্তি</th>
-        <th>পূর্ব বছরের জের</th>
-        <th>সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের)</th>
-        <th>বিতরণ (চলতি মাস)</th>
-        <th>বিতরণ (পূর্বমাস পর্যন্ত)</th>
-        <th>বিতরণ মোট (চলতি+পূর্ব মাস)</th>
-        <th>ডিএই চালানে প্রদান</th>
-        <th>মৃত/বিনষ্ট রাইটআপ</th>
-        <th>সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)</th>
-        <th>নীট মজুদ</th>
-        <th>মন্তব্য</th>
-        <th>পরিবর্তন/মুছুন</th>
-    </tr>
-    </thead>
-    <tbody>
+        <thead>
+        <tr>
+            <th>ক্যাটাগরি নাম</th>
+            <th>সাব-ক্যাটাগরি নাম</th>
+            <th>বিবরণ</th>
+            <th>জাত</th>
+            <th>উৎপাদন (লক্ষ্যমাত্রা)</th>
+            <th>উৎপাদন (চলতি মাস)</th>
+            <th>উৎপাদন (পূর্বমাস পর্যন্ত)</th>
+            <th>মোট উৎপাদন (চলতি+পূর্ব মাস)</th>
+            <th>ডিএই চালানে প্রাপ্তি</th>
+            <th>পূর্ব বছরের জের </th>
+            <th>সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের)</th>
+            <th>বিতরণ (চলতি মাস)</th>
+            <th>বিতরণ (পূর্বমাস পর্যন্ত)</th>
+            <th>বিতরণ মোট (চলতি+পূর্ব মাস)</th>
+            <th>ডিএই চালানে প্রদান</th>
+            <th>মৃত/বিনষ্ট রাইটআপ</th>
+            <th>সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)</th>
+            <th>নীট মজুদ</th>
+            <th>মন্তব্য</th>
+            <th>পরিবর্তন/মুছুন</th>
+        </tr>
+        </thead>
+        <tbody>
         <% records.forEach(function(row){ %>
+
+            <%
+                const currentMonth = moment().format("MMM-YYYY").toLowerCase();
+                var startRange = "";
+                var endRange = "";
+
+                var prevEconomicStart = "";
+                var prevEconomicEnd = "";
+
+                if (moment().format("M") < 7){
+                    startRange = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
+                    endRange = "jul"+"-"+moment().format('yyyy')
+                }else{
+                    startRange = "jul"+"-"+moment().format('yyyy')
+                    endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
+                }
+
+
+                // Previous Economic year
+
+                if (moment('nov-2020').format("M") < 7){
+                    prevEconomicStart = "jul"+"-"+moment().subtract(2, "year").format('yyyy')
+                    prevEconomicEnd = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
+                }else{
+                    prevEconomicStart = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
+                    prevEconomicEnd = "jul"+"-"+moment().format('yyyy')
+                }
+
+                // current production (  উৎপাদন  )*******
+                var currentProductionSum = 0;
+                var previousMonthProduction = 0;
+                const currentProd = JSON.parse(row.productionCurrent)
+                currentProd.forEach(function(prodCurrent){
+                    if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentProductionSum += parseInt(prodCurrent.amount)
+                    }
+                    else if ( moment( prodCurrent.time ).isSameOrAfter(startRange) &&  moment( prodCurrent.time ).isSameOrBefore(endRange) ){
+                        previousMonthProduction += parseInt(prodCurrent.amount)
+                    }
+                })
+
+                // মোট উৎপাদন (চলতি+পূর্ব মাস) *********
+                var totalProductionSum = 0;
+                const TotalProduction = JSON.parse(row.productionTotal)
+                TotalProduction.forEach(function(prodTotal){
+                    if ( moment(currentMonth).isAfter(prodTotal.startTime) &&  moment(currentMonth).isBefore(prodTotal.endTime) ){
+                        totalProductionSum += parseInt(prodTotal.amount)
+                    }
+                })
+
+                //ডিএই চালানে প্রাপ্তি (চলতি মাস) *********
+                var daePraptiSum = 0;
+                const currentDaePrapti = JSON.parse(row.daePrapti)
+                currentDaePrapti.forEach(function(daePraptiCurrent){
+                    if ( daePraptiCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        daePraptiSum += parseInt(daePraptiCurrent.amount)
+                    }
+                })
+
+                // পূর্ব বছরের জের *********
+                var prevYearJer = 0;
+                currentDaePrapti.forEach(function(daePraptiCurrent){
+                    if ( moment( daePraptiCurrent.time ).isAfter(prevEconomicStart) &&  moment( daePraptiCurrent.time ).isBefore(prevEconomicEnd) ) {
+                        prevYearJer += parseInt(daePraptiCurrent.amount)
+                    }
+                })
+
+                //  বিতরণ ********
+                var currentBitoronSum = 0;
+                var previousMonthBitoronSum = 0;
+                const currBitoron = JSON.parse(row.bitoronCurrentMonth)
+                currBitoron.forEach(function(BitoCurrent){
+                    if ( BitoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentBitoronSum += parseInt(BitoCurrent.amount)
+                    }
+                    else if ( moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
+                        previousMonthBitoronSum += parseInt(BitoCurrent.amount)
+                    }
+                })
+
+                // মোট বিতরণ ******
+                var totalBitoronSum = 0;
+                const TotalBitoron = JSON.parse(row.bitoronTotal)
+                TotalBitoron.forEach(function(bitorTotal){
+                    if ( moment(currentMonth).isAfter(bitorTotal.startTime) &&  moment(currentMonth).isBefore(bitorTotal.endTime) ){
+                        totalBitoronSum += parseInt(bitorTotal.amount)
+                    }
+                })
+
+                // ডিএই চালানে প্রদান *******
+                var currentDaeProdanSum = 0;
+                const currDaeProdan = JSON.parse(row.daeProdan)
+                currDaeProdan.forEach(function(DaeProdanCurrent){
+                    if ( DaeProdanCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
+                    }
+                })
+
+                // মৃত/বিনষ্ট ********
+                var currentMritoSum = 0;
+                const currMrito = JSON.parse(row.deadWriteup)
+                currMrito.forEach(function(MritoCurrent){
+                    if ( MritoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentMritoSum += parseInt(MritoCurrent.amount)
+                    }
+                })
+
+                // মজুদ ******
+                var currentMojudSum = 0;
+                const currMojud = JSON.parse(row.mojud)
+                currMojud.forEach(function(MojudCurrent){
+                    if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentMojudSum += parseInt(MojudCurrent.amount)
+                    }
+                })
+
+                // মন্তব্য *********
+                var montobboSum = "";
+                const currMontobbo = JSON.parse(row.comment)
+                currMontobbo.forEach(function(MontobboCurrent){
+                    if ( MontobboCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        montobboSum = MontobboCurrent.msg
+                    }
+                })
+
+            %>
+
             <tr>
-                <td><%= row.category %></td>
+                <td> <%= row.category %></td>
                 <td><%= row.subCategory %></td>
                 <td><%= row.biboron %></td>
                 <td><%= row.breed %></td>
-                <td><%= row.productionTarget %></td>
-                <td><%= row.productionCurrent %></td>
-                <td><%= row.productionLast %></td>
-                <td><%= row.productionTotal %></td>
-                <td><%= row.daePrapti %></td>
-                <td><%= row.lastYear %></td>
-                <td><%= row.grandTotalProduction %></td>
-                <td><%= row.bitotonCurrentMonth %></td>
-                <td><%= row.bitotonLastMonth %></td>
-                <td><%= row.bitoronTotal %></td>
-                <td><%= row.daeProdan %></td>
-                <td><%= row.deadWriteup %></td>
-                <td><%= row.grandTotalBitoron %></td>
-                <td><%= row.mojud %></td>
-                <td><%= row.comment %></td>
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                <td><%= new Number(row.productionTarget).toLocaleString("bn-BD") %></td>
+                <td>
+                    <%= new Number(currentProductionSum).toLocaleString("bn-BD") %>
+                </td>
+                <td> <%= new Number(previousMonthProduction).toLocaleString("bn-BD") %> </td>
+                <td> <%= new Number(totalProductionSum).toLocaleString("bn-BD") %> </td>
+                <td> <%= new Number(daePraptiSum).toLocaleString("bn-BD") %> </td>
+                <td> <%= new Number(prevYearJer).toLocaleString("bn-BD") %> </td>
+                <td> <%= new Number(totalProductionSum + daePraptiSum + prevYearJer).toLocaleString("bn-BD") %> </td>
+                <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(totalBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentMojudSum).toLocaleString("bn-BD") %></td>
+                <td><%= montobboSum %></td>
+                <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
                     <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
-    </tbody>
-</table>
+        </tbody>
+    </table>
 <% }else{ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
